fixing contrast of uw-link h2

--- a/wp-content/themes/uwsod-2014/less/uw.dental.less
+++ b/wp-content/themes/uwsod-2014/less/uw.dental.less
@@ -550,7 +550,7 @@ h2.uw-site-title {
 .on-campus{position:relative;padding:20px 0 0;background:url(assets/images/quad.jpg) no-repeat center center fixed #6b6b6b;-webkit-background-size:cover;-moz-background-size:cover;-o-background-size:cover;background-size:cover;z-index:200;}
 .on-campus .tile{background-color:#ECE9E2;overflow:hidden;vertical-align:top}
 .on-campus .tile .category{color:#85754d;font-weight:700;font-size:14px;text-transform:uppercase}
-.on-campus .tile h2 {color:#85754d;font-weight:700;font-size:14px;text-transform:uppercase}
+.on-campus .tile h2 {color:#766743;font-weight:700;font-size:14px;text-transform:uppercase}
 .on-campus .tile h3{color:#4b2e83;font-size:21px;margin-top:5px;font-weight:900}
 .on-campus .tile p{font-size:16px;line-height:1.6}
 .on-campus .tile p a{font-weight:700;color:#545454;position:relative}
