--- a/wp-content/themes/uwsod-2014/style.dev.css
+++ b/wp-content/themes/uwsod-2014/style.dev.css
@@ -9726,7 +9726,7 @@ display:inline-block;
   text-transform: uppercase;
 }
 .on-campus .tile h2 {
-  color: #85754d;
+  color: #766743;
   font-weight: 700;
   font-size: 14px;
   text-transform: uppercase;
